--- a/css/style.css
+++ b/css/style.css
@@ -233,17 +233,17 @@ form label {
   color: #52575c;
   margin: 0 0 0.5em 0; }
 
-form input[type="text"],
+
 form input[type="email"],
 form input[type="password"],
 form select,
 form textarea {
   -webkit-appearance: none;
-  display: block;
+  display: inline-block;
   background: #f9fbfe;
   border: solid 1px #d2d7dc;
   border-radius: 0.35em;
-  width: 100%;
+  width: 66%;
   line-height: 1.5em;
   padding: 0.75em;
   -moz-transition: background-color 0.25s ease-in-out;
@@ -251,6 +251,24 @@ form textarea {
   -o-transition: background-color 0.25s ease-in-out;
   -ms-transition: background-color 0.25s ease-in-out;
   transition: background-color 0.25s ease-in-out; }
+form input[type="text"] {
+  margin-left: .5em;
+  margin-right:.5em;
+  margin-bottom: 1em;
+  -webkit-appearance: none;
+  display: inline-block;
+  background: #f9fbfe;
+  border: solid 1px #d2d7dc;
+  border-radius: 0.35em;
+  width: 66%;
+  line-height: 1.5em;
+  padding: 0.75em;
+  -moz-transition: background-color 0.25s ease-in-out;
+  -webkit-transition: background-color 0.25s ease-in-out;
+  -o-transition: background-color 0.25s ease-in-out;
+  -ms-transition: background-color 0.25s ease-in-out;
+  transition: background-color 0.25s ease-in-out; }
+    
 
 form input[type="text"]:focus,
 form input[type="email"]:focus,
